# HR-ATTRITION-RATE

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COLOR_AND_LABELS.md  Dockerfile.api  Dockerfile.streamlit  MICROCOPY.md  README.md  STREAMLIT_CODE.py  UI_TESTING_GUIDE.md  app.py  app.py,cover  app_improved.py  commit_guidelines.md  create_synthetic_data.py  database_considerations.md  database_proposal.md  database_schema.md  database_setup_and_ml_integration.md  database_setup_instructions.md  debug_types.py  deployment_instructions.md  docker-compose.yml  issue_export.md  log_odds_risk_determination_update.md  new_streamlit_app.py  pending_issues.md  postgresql_debug_instructions.md  postgresql_debug_steps.md  pyproject.toml  requirements.txt  response_to_user.md  risk_determination_proposal.md  shap_feature_ordering_explanation.md  streamlit_app.py  streamlit_test_failures_summary.txt  test_api_with_core.py  (+8 more)
.github/workflows/: ci-cd.yml
Project Inputs/: Employee Attrition Prediction.htm  P4_refactored.ipynb
api/: README.md  get_model_features.py  security.py
api/app/: main.py  schemas.py
api/tests/: test_api.py
core/: __init__.py  data_processing.py  preprocess.py  schema.py  validation.py
data/: extrait_eval.csv  extrait_sirh.csv  extrait_sondage.csv
database/: __init__.py  database.py  init_db.py  models.py  schema.sql  seed_data.py
hr_attrition_rate/: app.py  train.py
outputs/: X_test.parquet  employee_attrition_pipeline.pkl  y_test.parquet
outputs/snapshots/: 20251109_165557_p4_attrition_X_train.parquet  20251109_165557_p4_attrition_manifest.json  20251109_171612_p4_attrition_manifest.json  20251109_173608_p4_attrition_manifest.json  20251109_173608_p4_attrition_y_train.parquet  20251112_085402_p4_attrition_manifest.json  20251112_090023_p4_attrition_manifest.json  20251112_095750_p4_attrition_manifest.json
tests/: conftest.py  test_app.py  test_app_more.py  test_core.py  test_database.py  test_streamlit_app.py  test_streamlit_ui.py
