[project]
name = "hr-attrition-rate"
version = "0.1.0"
description = ""
authors = [
    {name = "Shahul SHAIK",email = "shah.data.scientist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit",
    "scikit-learn",
    "imbalanced-learn",
    "shap",
    "pandas",
    "matplotlib",
    "openpyxl",
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"

[tool.pytest.ini_options]



